# pixelnova-frontend

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  README.md  build-wasm-garble.sh  build-wasm.sh  editor-PRD.md  gen-types.sh  next.config.js  package-lock.json  package.json  tsconfig.json  wrangler.toml
documents/: canvas.md  editor-tools.md  editor.md
public/: CppWasm.js  CppWasm.wasm  _headers  main.wasm  robots.txt
public/workers/: cpp.worker.js
src/: env.js  middleware.ts  shared-types.ts
src/app/: layout.tsx  page.tsx
src/components/: Auth.tsx  ImageProcessor.tsx  conversions-display.tsx  credits-display.tsx  error-boundary.tsx  error-view.tsx  wasm-provider.tsx
src/documents/: editor.md
src/hooks/: use-api.tsx  use-credits.tsx  use-indexed-db.ts  use-media-query.ts  use-modal.tsx  use-user.tsx  useCanvasSetup.ts  useImageProcessor.ts  useKeyboardShortcuts.ts  useSelection.ts  useToolHandler.ts  useTouchHandlers.ts  useViewport.ts
src/lib/: client-image-processing.ts  constants.ts  image-processing.ts  skin-tone-processing.ts  supabase.ts  types_db.ts  validate-form.ts  wasm.ts
src/store/: editorStore.ts  historyStore.ts
src/styles/: globals.css
src/types/: canvas.ts  editor.ts  types.ts  worker.d.ts
src/workers/: image.worker.js
wasm/: CMakeLists.txt  base64.cpp  base64.hpp  build.bat  build.sh  downscale-image.cpp  estimate-grid.cpp  estimate-grid.hpp  go.mod  kmeans_quantization.cpp  kmeans_quantization.hpp  main.cpp  main.go  main.hpp
wasm/util/: downscale-image.go  estimate-grid.go  hash.go  kmeans-quantization.go
(+101 files in other folders)
